@@ -1,15 +1,22 @@
+
+
+	* libavogadro/src/tools/selectrotatetool.cpp: Modified the selection
+	behaviour to more closely match other applications. Clicking on atoms
+	and drawing boxes now selects just the primitives in that area,
+	holding down shift adds the new primitives to the selection.
+
 2008-03-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
 
 	* avogadro/src/extensions/wiitrackextension.*: Wiimote head tracking
 	extension.
 
-	* avogadro/src/extensions/CMakeLists.txt: Do not compile Wiimote 
+	* avogadro/src/extensions/CMakeLists.txt: Do not compile Wiimote
 	head tracking extension as default
 
 2008-03-11  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
 
 	* libavogadro/src/colorbutton.h: Added A_EXPORT.
-	
+
 	* libavogadro/src/periodictableview.h: Added A_EXPORT.
 
 2008-03-10  Jordan Mantha  <jordan.mantha@gmail.com>
@@ -20,7 +27,7 @@
 2008-03-10  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
 
 	* libavogadro/src/povpainter.cpp: Add } to camera {. Fixes #1911507
-	
+
 2008-03-09  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/engines/iso.cpp: Corrected a bug where the surface
